website/code/chameneos-gcj.log
BUILD COMMANDS FOR: chameneos.gcj

Tue Jan 16 16:14:24 PST 2007

/usr/bin/gcj-4.1 -O3 -fomit-frame-pointer -march=athlon-tbird  -o chameneos.gcj_run --main=chameneos chameneos.java
chameneos.java:17: error: Invalid declaration.
	public enum Colour {
                              ^
chameneos.java:18: error: ':' expected.
		RED, BLUE, YELLOW, FADED
                      ^
chameneos.java:125: error: .
	public chameneos(int n) throws InterruptedException {
           ^
chameneos.java:7: error: .
import java.util.concurrent.locks.ReentrantLock;
          ^
chameneos.java:13: error: .
	public static final Colour[] COLOURS = Colour.values();
                               ^
chameneos.java:25: error: .
		private Colour colour;
                           ^
chameneos.java:29: error: .
		public Creature(Colour c, MeetingPlace mp) {
                                   ^
chameneos.java:44: error: .
			Colour other;
                           ^
chameneos.java:60: error: .
		private Colour complement(Colour other) {
                                             ^
chameneos.java:60: error: .
		private Colour complement(Colour other) {
                           ^
chameneos.java:79: error: .
		public Colour getColour() {
                          ^
chameneos.java:85: error: .
		Colour first, second;
                   ^
chameneos.java:85: error: .
		Colour first, second;
                   ^
chameneos.java:95: error: .
		public Colour meet(Colour me) throws Exception {
                                      ^
chameneos.java:95: error: .
		public Colour meet(Colour me) throws Exception {
                          ^
chameneos.java:96: error: .
			Colour other;
                           ^
16 errors
make[1]: [chameneos.gcj_run] Error 1 (ignored)
rm chameneos.gcj

=================================================================
COMMAND LINE (%A is single numeric argument):

chameneos.gcj_run %A
Error, could not exec chameneos.gcj_run 10000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/chameneos:/opt/shootout/shootout/bench/chameneos/tmp:/home/brent/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
